# api/router/routes.go
@@ -28,7 +28,8 @@ func Config(db *gorm.DB) http.Handler {
 				"PUT",
 				"DELETE",
 			},
-			AllowHeaders:     []string{"*"},
+			
+			AllowHeaders: []string{"*"},
 			AllowCredentials: true,
 		},
 	))
@@ -65,7 +66,7 @@ func Config(db *gorm.DB) http.Handler {
 
 	// Razorpay Webhook
 	v1.POST("/payments/webhook", controllers.RazorpayWebhook)
-
+	
 	// Protected Routes
 	protected := v1.Group("/")
 	protected.Use(middleware.Authenticate(db))
@@ -74,6 +75,9 @@ func Config(db *gorm.DB) http.Handler {
 		protected.GET("/account", controllers.GetAccount)
 		protected.PUT("/account", controllers.UpdateAccount)
 		protected.DELETE("/account", controllers.DeleteAccount)
+		
+		// Timezone
+		protected.POST("/timezone", controllers.InferTimezone)
 
 		// Connections
 		protected.GET("/connections", controllers.GetConnections)
